--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "cppcheck-lite",
-  "displayName": "Cppcheck Lite",
-  "description": "A minimalistic VS Code extension that runs cppcheck on C/C++ files upon save and shows issues in the Problems panel.",
-  "version": "1.3.0",
-    "engines": {
+  "name": "cppcheck-lite2",
+  "displayName": "Cppcheck Lite2",
+  "description": "A minimalistic VS Code extension that runs cppcheck on C/C++ files upon save and shows issues in the Problems panel. compile_commands.json and .cppcheck-config files are used to configure Cppcheck.",
+  "version": "1.0.0",
+  "engines": {
     "vscode": "^1.96.0"
   },
-  "author": "Justus Rijke <justusrijke@gmail.com>",
+  "author": "Emiel Estiévenart",
   "repository": {
     "type": "git",
-    "url": "https://github.com/JustusRijke/Cppcheck-Lite.git"
+    "url": "https://github.com/EmielEstievenart/Cppcheck-Lite2"
   },
-  "publisher": "JustusRijke",
+  "publisher": "Emiel Estiévenart",
   "license": "MIT",
   "keywords": [
     "cppcheck",
@@ -21,7 +21,7 @@
     "analysis",
     "diagnostic",
     "linter"
-  ],  
+  ],
   "categories": [
     "Linters"
   ],
@@ -30,20 +30,20 @@
     "onLanguage:cpp",
     "onLanguage:c",
     "onLanguage:c++"
-    ],
+  ],
   "main": "./out/extension.js",
   "contributes": {
     "configuration": [
       {
-        "title": "Cppcheck Lite (General)",
+        "title": "Cppcheck Lite 2(General)",
         "order": 1,
         "properties": {
-          "cppcheck-lite.enable": {
+          "cppcheck-lite2.enable": {
             "type": "boolean",
             "default": true,
-            "description": "Enable or disable the Cppcheck Lite extension."
+            "description": "Enable or disable the Cppcheck Lite2 extension."
           },
-          "cppcheck-lite.minSeverity": {
+          "cppcheck-lite2.minSeverity": {
             "type": "string",
             "enum": [
               "info",
@@ -52,38 +52,27 @@
             ],
             "default": "info",
             "description": "Minimum severity of issues to report (info, warning, or error)."
-          },
-          "cppcheck-lite.standard": {
-            "type": "string",
-            "enum": [
-              "<none>",
-              "c89",
-              "c99",
-              "c11",
-              "c++03",
-              "c++11",
-              "c++14",
-              "c++17",
-              "c++20"
-            ],
-            "default": "c++20",
-            "description": "C/C++ standard to use for cppcheck (`--std=<id>`). Select `<none>` to specify it in `cppcheck-lite.arguments` or let `cppcheck` use its default setting."
           }
         }
       },
       {
-        "title": "Cppcheck Lite (Advanced)",
+        "title": "Cppcheck Lite2 (Advanced)",
         "order": 2,
         "properties": {
-          "cppcheck-lite.path": {
+          "cppcheck-lite2.path": {
             "type": "string",
             "default": "",
             "description": "Path to the cppcheck executable. If empty, uses 'cppcheck' from the system PATH."
           },
-          "cppcheck-lite.arguments": {
+          "cppcheck-lite2.whole_program_checking": {
+            "type": "boolean",
+            "default": false,
+            "description": "By default, Cppcheck is run in such a way that only the current file is checked. If this setting is enabled, the whole program is checked."
+          }, 
+          "cppcheck-lite2.build_directory": {
             "type": "string",
-            "default": "",
-            "description": "Additional command line arguments for cppcheck."
+            "default": "Cppcheck-lite2-build",
+            "description": "Path to the build directory. If empty, uses the workspace root/Cppcheck-lite2-build"
           }
         }
       }
@@ -98,14 +87,14 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.96.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
+    "@types/vscode": "^1.97.0",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
-    "eslint": "^9.16.0",
-    "typescript": "^5.7.2",
     "@vscode/test-cli": "^0.0.10",
-    "@vscode/test-electron": "^2.4.1"
+    "@vscode/test-electron": "^2.4.1",
+    "eslint": "^9.16.0",
+    "typescript": "^5.7.2"
   }
 }
