--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,8 +1,8 @@
 .vscode/**
 .vscode-test/**
-src/**
 .gitignore
 .yarnrc
+src/*.ts
 vsc-extension-quickstart.md
 **/tsconfig.json
 **/eslint.config.mjs
