--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "onLanguage:c++"
   ],
   "main": "./out/extension.js",
-
   "contributes": {
     "configuration": [
       {
@@ -94,6 +93,7 @@
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
     "@types/vscode": "^1.97.0",
+    "@types/xml2js": "^0.4.14",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
     "@vscode/test-cli": "^0.0.10",
@@ -102,6 +102,7 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
-    "vscode-cmake-tools": "^1.2.0"
+    "vscode-cmake-tools": "^1.2.0",
+    "xml2js": "^0.6.2"
   }
 }
