--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "cppcheck-turbo",
   "displayName": "Cppcheck Turbo",
-  "description": "A minimalistic VS Code extension that runs cppcheck on C/C++ files upon save and shows issues in the Problems panel. compile_commands.json and .cppcheck-config files are used to configure Cppcheck.",
-  "version": "2.0.5",
+  "description": "Run Cppcheck on C/C++ files upon save and shows issues in the Problems panel. Compile_commands.json and .cppcheck-config files are used to configure Cppcheck.",
+  "version": "2.0.6",
   "engines": {
     "vscode": "^1.97.0"
   },
@@ -26,7 +26,8 @@
     "linter"
   ],
   "categories": [
-    "Linters"
+    "Linters",
+    "Testing"
   ],
   "icon": "images/icon.png",
   "activationEvents": [
